edit and rename files

--- a/hex.html
+++ b/hex.html
@@ -10,7 +10,7 @@
     <nav>
         <h3>Color Flipper</h3>
         <ul>
-            <a href="simple.html"><li>Simple</li></a>
+            <a href="index.html"><li>Rgb</li></a>
             <a href="hex.html"><li>Hex</li></a>
         </ul>
     </nav>
