--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <h3>Color Flipper</h3>
         <ul>
-            <a href="simple.html"><li>Simple</li></a>
+            <a href="index.html"><li>Rgb</li></a>
             <a href="hex.html"><li>Hex</li></a>
         </ul>
     </nav>
@@ -18,6 +18,6 @@
         <h3 class="color-title">Background Color : <span>Color</span></h3>
         <button>CLICK ME</button>
     </div>
-    <script src="simple.js"></script>
+    <script src="rgb.js"></script>
 </body>
 </html>
